<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M@ilMaster</string>
    <string name="title_activity_mail_sender">MailSenderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_reply">Reply</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_account_picker">AccountPickerActivity</string>
    <string name="add_acc">Add Account</string>
    <string name="add_email">Add an email adress...</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="drafts">Drafts</string>
    <string name="send">Send</string>
    <string name="settings">Account Settings</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="sender">From:</string>
    <string name="receiver">To:</string>
    <string name="cc">CC:</string>
    <string name="bcc">BCC:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="compose">Compose Email...</string>
    <string name="composing">Composing email...</string>
    <string name="composing_rp">Composing reply...</string>
    <string name="attach">Attach File...</string>
    <string name="attached">Attached files...</string>
    <string name="get_attach">Get attachments</string>
    <string name="title_activity_show_email">ShowEmailActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="title_activity_attachments">AttachmentsActivity</string>
    <string name="folders">Choose Folder...</string>
    <string name="languages">Language</string>
    <string name="english">EN</string>
    <string name="swedish">SW</string>
    <string name="arabic">AR</string>
    <string name="german">DE</string>
    <string name="msDrafts">Drafts</string>
    <string name="msSent">Sent</string>
    <string name="gmailDrafts">[Gmail]/Drafts</string>
    <string name="gmailSent">[Gmail]/Sent Mail</string>
    <string name="choose_acc">Select account...</string>
    <string name="download">DownloadItem</string>
    <string name="contacts">Download contacts</string>
    <string name="total_size">Total size:</string>
    <string name="active_account">Active Accounts:</string>
    <string name="message_title">Cancel Compose</string>
    <string name="message_dia">Do you wish to save a draft?</string>
    <string name="yes_answer">Yes</string>
    <string name="no_answer">No</string>
    <string name="fetch_inbox">Fetching Inbox...</string>
    <string name="fetch_drafts">Fetching Drafts...</string>
    <string name="fetch_sent">Fetching Sent Emails...</string>
    <string name="read_email">Loading Email Contents...</string>
    <string name="construct_rep">Constructing Reply...</string>
    <string name="read_contact">Parsing contacts (result will be saved for future use)...</string>
    <string name="save_draft">Saving Draft...</string>
    <string name="no_attachments">This email contains no attachments.</string>
    <string name="hint_to">Write recievers here...</string>
    <string name="hint_cc">Write CC targets here...</string>
    <string name="hint_bcc">Write BCC targets here...</string>
    <string name="hint_subject">Write subject here...</string>
    <string name="hint_message">Write message here...</string>
    <string name="toast_addacc">Field(s) too short/unfilled.</string>
    <string name="toast_addacc1">Email provider not supported.</string>
    <string name="toast_addacc2">This account has already been added.</string>
    <string name="toast_attdownload">Successfully downloaded</string>
    <string name="toast_attdownload1">Failed to download</string>
    <string name="toast_big_size">Could not send, files are too big to attach!</string>
    <string name="toast_emailsel">Email Selected :</string>
    <string name="toast_service_creat">Service created</string>
    <string name="toast_service_dest">Service destroyed</string>
    <string name="toast_service_start">Service started</string>
    <string name="toast_sendsucc">Send successful! (if email was close to max size, this may appear minutes after pressing send).</string>
    <string name="toast_sendfail">Send failed, one or more supplied adresses contain illegal characters (email has been saved as draft).</string>
    <string name="toast_wrongpass">Wrong password or inexistant account.</string>
    <string name="toast_save_draft">Draft Saved.</string>
    <string name="toast_fail_save">Failed to save draft.</string>
    <string name="send_email">Sending Email...</string>
    <string name="title_activity_gplinfo">GPLInfoActivity</string>
    <string name="gpl_link">&lt;a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU General Public License&lt;/a></string>
    <string name="download_att">downloading...</string>
    <string name="first_p">First page</string>
    <string name="previous_p">Previous page</string>
    <string name="next_p">Next page</string>

    <!-- The strings below need German/Arabic translations -->
    <string name="page">PG</string>
    <string name="on_first">You are already on the first page.</string>
    <string name="on_last">You are already on the last page.</string>

</resources>