<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_toAddAccount"
        android:showAsAction="always"
        android:title="@string/add_acc" 
        android:onClick="toAdd"
        android:icon="@drawable/ic_action_add_person"/>
    
    <item
        android:showAsAction="always"
        android:title="@string/folders" 
        android:icon="@drawable/ic_action_collection">
        <menu>
            <item
        	android:id="@+id/action_toInbox"
        	android:showAsAction="withText"
        	android:title="@string/inbox" 
        	android:onClick="toInbox">
        	</item>
        	<item
        	android:id="@+id/action_toSent"
        	android:showAsAction="withText"
        	android:title="@string/sent" 
        	android:onClick="toInbox">
        	</item>
        	<item
        	android:id="@+id/action_toDrafts"
        	android:showAsAction="withText"
        	android:title="@string/drafts" 
        	android:onClick="toInbox">
        	</item>
         </menu>
	</item>
</menu>
