<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_toSettings"
        android:showAsAction="always"
        android:title="@string/settings" 
        android:onClick="onClickSettings"
        android:icon="@drawable/ic_action_settings"/>
    
        <item
        android:showAsAction="always"
        android:title="@string/folders" 
        android:icon="@drawable/ic_action_collection">
        <menu>
            <item
        	android:id="@+id/action_inbox"
        	android:showAsAction="withText"
        	android:title="@string/inbox" 
        	android:icon="@drawable/ic_action_inboxemail"
        	android:onClick="changeFolder">
        	</item>
        	<item
        	android:id="@+id/action_sent"
        	android:showAsAction="withText"
        	android:title="@string/sent" 
        	android:icon="@drawable/ic_action_send_inbox"
        	android:onClick="changeFolder">
        	</item>
        	<item
        	android:id="@+id/action_drafts"
        	android:showAsAction="withText"
        	android:title="@string/drafts" 
        	android:icon="@drawable/ic_action_draftsave"
        	android:onClick="changeFolder">
        	</item>
         </menu>
	</item>
    
    <item
        android:id="@+id/action_toCompose"
        android:showAsAction="always"
        android:title="@string/inbox" 
        android:onClick="onClickCompose"
        android:icon="@drawable/ic_action_new_email"/>

</menu>
