<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp">

        <EditText
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:id="@+id/email"
            android:hint="@string/email"
            android:singleLine="true"
            />
    </LinearLayout>

    <EditText
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:password="true"
        />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/add_acc"
        android:id="@+id/button"
        android:onClick="add"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:alpha="0.75"/>

</LinearLayout>