<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    

    <TextView
        android:id="@+id/sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/sender"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sendAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sender"
        android:layout_toRightOf="@+id/sender"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sender"
        android:layout_below="@+id/sender"
        android:layout_marginTop="15dp"
        android:text="@string/receiver"
        android:textAppearance="?android:attr/textAppearanceMedium" />

     <MultiAutoCompleteTextView
        android:id="@+id/receiveAccs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receiver"
        android:ems="10"
        android:hint="Write Reciever here"
        android:singleLine="true" />
    
        <TextView
        android:id="@+id/cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/receiveAccs"
        android:layout_below="@+id/receiveAccs"
        android:text="@string/cc"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <MultiAutoCompleteTextView
        android:id="@+id/ccAccs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cc"
        android:ems="10" 
        android:hint="Write emails to CC here"
        android:singleLine="true" />
        
        <TextView
        android:id="@+id/bcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ccAccs"
        android:layout_below="@+id/ccAccs"
        android:text="@string/bcc"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <MultiAutoCompleteTextView
        android:id="@+id/bccAccs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bcc"
        android:ems="10" 
        android:hint="Write emails to BCC here"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bccAccs"
        android:layout_below="@+id/bccAccs"
        android:text="@string/subject"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:ems="10" 
        android:hint="Write subject here"
        android:singleLine="true" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subject"
        android:layout_below="@+id/subject"
        android:text="@string/message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message"
        android:layout_below="@+id/message"
        android:ems="10"
        android:hint="Write receiver message here"
        android:singleLine="false" />

    <TextView
        android:id="@+id/totalsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/body"
        android:text="Total size:" />
      
</RelativeLayout>
